--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+ @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500&family=Raleway:ital,wght@0,100;0,400;1,100;1,300;1,600;1,800&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ /*? base style */
+ html,
+ body,
+ #root {
+   height: 100vh;
+ }
+
+ body {
+   font-family: 'Raleway', sans-serif;
+   margin: 0;
+   font-size: 1.1em;
+   color: #333;
+ }
+
+ ul,
+ li,
+ p,
+ h1,
+ h2,
+ h3,
+ h4 {
+   margin: 0;
+   padding: 0;
+ }
+
+ ul {
+   list-style-type: none;
+ }
+
+ .btn {
+   background: none;
+   border: 2px solid #1f9751;
+   padding: 6px 12px;
+   border-radius: 6px 12px;
+   color: #1f9751;
+   font-weight: bold;
+   cursor: pointer;
+   font-size: 1em;
+   margin-bottom: 12px;
+ }
+
+ .btn:hover {
+   background: #1f9751;
+   color: #fff;
+ }
+
+::-webkit-scrollbar{
+  width: 0%;
 }
